fixed z-index on user-img--box

--- a/src/components/EditProfile/UserImageUpload/UserImageUpload.scss
+++ b/src/components/EditProfile/UserImageUpload/UserImageUpload.scss
@@ -35,7 +35,7 @@
   &__reset-img--box {
     width: 100%;
     height: 100%;
-    z-index: 100;
+    z-index: 98;
     background-color: #22222249;
     position: absolute;
     inset: 0;
